--- a/style.css
+++ b/style.css
@@ -124,9 +124,133 @@ span{
     font-size: 1rem;
     font-weight: 700;
 }
+/**hero section**/
 .hero-section{
     background-image: url(hero_image.jpg);
     background-size: cover;
-    height: 520px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-bottom: 0px;
+   
+}
+.hero-message{
+    background-color: white;
+    color: black;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.85rem;
+    bottom: 25px;
+    position: relative;
+    width: 80%;
+
+}
+.hero-message a{
+    color: #007185;
     
+
+}
+/** shop section**/
+.content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #e2e7e6;
+}
+.box{
+    
+    height:400px;
+    width:23%;
+    padding: 20px 0px 15px;
+    background-color: white;
+    margin-top: 15px;
+
+
+
+}
+.box-image{
+    height:300px ;
+    background-size:cover;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    
+    
+}
+.box-content{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.box-content{
+    color: #007185;
+    
+}
+/**footer **/
+footer{
+    margin-top: 15px;
+}
+.foot-panel1{
+    background-color:#37475a ;
+    color:white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.85rem;
+   
+}
+.foot-panel2{
+    background-color: #222f3d;
+    color: white;
+    display: flex;
+    height: 500px;
+    justify-content: space-evenly;
+    
+
+}
+ul{
+    margin-top: 20px;
+}
+ul a{
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 15px;
+    color: #dddddd;
+}
+.foot-panel3{
+    background-color:#222f ;
+    color: white;
+    border-top: 0.5px solid white;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logoo{
+    background-image: url("amazon_logo.png");
+    background-size: cover;
+    height: 50px;
+    width: 100px;
+    
+}
+.foot-panel4{
+    background-color: #0f1111;
+    color: white;
+    height: 80px;
+    
+}
+.pages{
+    font-size: 0.7rem;
+    
+    padding: 27px;
+    text-align: center;
+}
+.copyright{
+    font-size: 0.7rem;
+    text-align: center;
+    margin-top: -15px;
+    
+
 }
